crates/mun_codegen/src/snapshots/test__assignment_op_i128.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn assign(a: i128, b: i128) -> i128 {\n    a = b;\n    a\n}\npub fn assign_add(a: i128, b: i128) -> i128 {\n    a += b;\n    a\n}\npub fn assign_subtract(a: i128, b: i128) -> i128 {\n    a -= b;\n    a\n}\npub fn assign_multiply(a: i128, b: i128) -> i128 {\n    a *= b;\n    a\n}\npub fn assign_divide(a: i128, b: i128) -> i128 {\n    a /= b;\n    a\n}\npub fn assign_remainder(a: i128, b: i128) -> i128 {\n    a %= b;\n    a\n}"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo.1 = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo.1 addrspace(4)*]

define i128 @assign(i128 %0, i128 %1) {
body:
  ret i128 %1
}

define i128 @assign_add(i128 %0, i128 %1) {
body:
  %add = add i128 %0, %1
  ret i128 %add
}

define i128 @assign_subtract(i128 %0, i128 %1) {
body:
  %sub = sub i128 %0, %1
  ret i128 %sub
}

define i128 @assign_multiply(i128 %0, i128 %1) {
body:
  %mul = mul i128 %0, %1
  ret i128 %mul
}

define i128 @assign_divide(i128 %0, i128 %1) {
body:
  %div = sdiv i128 %0, %1
  ret i128 %div
}

define i128 @assign_remainder(i128 %0, i128 %1) {
body:
  %rem = srem i128 %0, %1
  ret i128 %rem
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@"type_info::<core::i128>::name" = private unnamed_addr constant [11 x i8] c"core::i128\00"
@"type_info::<core::i128>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"\BDkp\09RRM\EBc\02\A0\DB47\A7\E3", [11 x i8]* @"type_info::<core::i128>::name", i32 128, i8 8, i8 0 }
@global_type_table = global [1 x %struct.MunTypeInfo addrspace(4)*] [%struct.MunTypeInfo addrspace(4)* @"type_info::<core::i128>"]

