crates/mun_codegen/src/snapshots/test__assignment_op_u8.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn assign(a: u8, b: u8) -> u8 {\n    a = b;\n    a\n}\npub fn assign_add(a: u8, b: u8) -> u8 {\n    a += b;\n    a\n}\npub fn assign_subtract(a: u8, b: u8) -> u8 {\n    a -= b;\n    a\n}\npub fn assign_multiply(a: u8, b: u8) -> u8 {\n    a *= b;\n    a\n}\npub fn assign_divide(a: u8, b: u8) -> u8 {\n    a /= b;\n    a\n}\npub fn assign_remainder(a: u8, b: u8) -> u8 {\n    a %= b;\n    a\n}"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo.1 = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo.1 addrspace(4)*]

define i8 @assign(i8 %0, i8 %1) {
body:
  ret i8 %1
}

define i8 @assign_add(i8 %0, i8 %1) {
body:
  %add = add i8 %0, %1
  ret i8 %add
}

define i8 @assign_subtract(i8 %0, i8 %1) {
body:
  %sub = sub i8 %0, %1
  ret i8 %sub
}

define i8 @assign_multiply(i8 %0, i8 %1) {
body:
  %mul = mul i8 %0, %1
  ret i8 %mul
}

define i8 @assign_divide(i8 %0, i8 %1) {
body:
  %div = udiv i8 %0, %1
  ret i8 %div
}

define i8 @assign_remainder(i8 %0, i8 %1) {
body:
  %rem = urem i8 %0, %1
  ret i8 %rem
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@"type_info::<core::u8>::name" = private unnamed_addr constant [9 x i8] c"core::u8\00"
@"type_info::<core::u8>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"\A0y\A7S\B6(n\F7f&H\E1\F9\AD\04>", [9 x i8]* @"type_info::<core::u8>::name", i32 8, i8 1, i8 0 }
@global_type_table = global [1 x %struct.MunTypeInfo addrspace(4)*] [%struct.MunTypeInfo addrspace(4)* @"type_info::<core::u8>"]

